Changelog

"a love supreme"
- John Coltrane, A Love Supreme (1965)

Create patch E is now supported.

Added:
- Added sound effects to cannon casting wand
- Added tooltip for invalid cannon cast recipes
Changes:
- Some new textures courtesy of Milkyfur and LopyLuna
 - Updated attributions
- Increased data sync rate for cannon drill to avoid laggy motion
- Create Big Cannons now uses an integrated mod jar for projectile syncing
Fixes:
- Fixed cannon crafting wand not boring autocannons
- Fixed cannon crafting wand not properly connecting cannons
- Fixed cannons moving in irregular fashion on cannon carriage
- Fixed cannon cast getting stuck when encountering invalid recipes
- Fixed big cannon layer crashing game when placed
- Fixed cannon carriage spawning ghost blocks
[Fabric 1.20.1] - Fixed cannon carriage model not loading properly